--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 
 permissions:
   contents: read
+  issues: write
 
 jobs:
   test-typescript:
@@ -53,12 +54,34 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
+
       - name: Test Local Action
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          repository: benlei/internal-issues
+          app-token: ${{ steps.app-token.outputs.token }}
+          issue-number: 1
+          labels: test123, foo-bar-baz, hello-world
+          fail-on-error: true
 
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+      - name: Delete created labels
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const labels = ['test123', 'foo-bar-baz', 'hello-world'];
+            for (const label of labels) {
+              await github.issues.deleteLabel({
+                owner: 'benlei',
+                repo: 'internal-issues',
+                name: label
+              });
+            }
