--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "typescript-action",
-  "description": "GitHub Actions TypeScript template",
-  "version": "0.0.0",
-  "author": "",
+  "name": "add-labels-deterministically",
+  "description": "Adds labels to an issue. Tries to create label if it doesn't exist in repo with a deterministic color, but skips if it already exists.",
+  "version": "1.0.0",
+  "author": "benlei",
   "private": true,
-  "homepage": "https://github.com/actions/typescript-action",
+  "homepage": "https://github.com/benlei/add-labels-deterministically",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/benlei/add-labels-deterministically.git"
   },
   "bugs": {
-    "url": "https://github.com/actions/typescript-action/issues"
+    "url": "https://github.com/benlei/add-labels-deterministically/issues"
   },
   "keywords": [
     "actions",
@@ -66,7 +66,11 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/core": "^5.2.0",
+    "@octokit/plugin-retry": "^6.0.1",
+    "string-to-hex-code-color": "^1.0.8"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
