--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         uses: ./
         with:
           repository: benlei/internal-issues
-          app-token: ${{ steps.app-token.outputs.token }}
+          token: ${{ steps.app-token.outputs.token }}
           issue-number: 1
           labels: test123, foo-bar-baz, hello-world
           fail-on-error: true
