add some logging...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
           script: |
             const labels = ['test123', 'foo-bar-baz', 'hello-world'];
             for (const label of labels) {
-              await github.issues.deleteLabel({
+              await github.rest.issues.deleteLabel({
                 owner: 'benlei',
                 repo: 'internal-issues',
                 name: label
